<resources>
    <string name="partner_id">0x11300001</string>
    <string name="app_name">3D Store</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="login">Log In</string>
    <string name="login_and_regist">Log In/Sign Up</string>
    <string name="login_password">Enter password</string>
    <string name="player_exit_in_3g">Not in WLAN,backgroud player has quit</string>
    <string name="player_exit_in_wifi_to_3g">Not in WLAN,stop playing to protect your data fees.</string>
    <string name="player_in_3g">Not in WLAN,considering the data fee,it is recommended that you play in WLAN</string>
    <string name="player_switching_video">Switching definition</string>
    <string name="player_switching_video_resouce">Switching video resource</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="has_no_using_network">No available network</string>
    <string name="no_found_sdcard">SD card is not loaded</string>
    <string name="no_wifi_stop_download">2G/3G/4G data protection is open,whether to change the settings?</string>
    <string name="more">Settings</string>
    <string name="please_enter_account">Enter your account and password</string>
    <string name="loading">Loading&#8230;</string>
    <string name="regist_account">Sign Up</string>
    <string name="flow_next_show">Do not ask me any more</string>
    <string name="delete_tasks_confirmation">Delete Message</string>
    <string name="aboutus">About Us</string>
    <string name="commit">Submit</string>
    <string name="about_blank">file:///android_asset/about_blank.html</string>
    <string name="click_login"><u>Click to login</u></string>
    <string name="play_record">Watched Records</string>
    <string name="pay_history">Purchased Records</string>
    <string name="operate_delete">Delete</string>
    <string name="pull_to_refresh_pull_label">Pull down to refresh</string>
    <string name="pull_to_refresh_release_label">Release to refresh</string>
    <string name="pull_to_refresh_refreshing_label">Refreshing\u2026</string>
    <string name="ptr_last_updated">Updating: {0}</string>
    <string name="edit">Edit</string>
    <string name="confirm_title">Message</string>
    <string name="redo">Retry</string>
    <string name="fetching_video_name">Fetching the name of video</string>
    <string name="re_play">Replay</string>
    <string name="continue_play_tip">Played</string>
    <string name="watch_to">Played to</string>
    <string name="pay_movie">Purchased movie</string>
    <string name="pay_method">Payment</string>
    <string name="pay_commit">Pay</string>
    <string name="agree_and_regist">Regist</string>
    <string name="regist_email">Email:</string>
    <string name="login_account">Account:</string>
    <string name="regist_nicky">NickName:</string>
    <string name="phone_regist_nicky">NickyName:</string>
    <string name="regist_password">Password:</string>
    <string name="phone_regist_password">Password:</string>
    <string name="regist_edit_email_hint"></string>
    <string name="regist_edit_nicky_hint">4&#8211;16 characters</string>
    <string name="regist_edit_password_hint">6&#8211;12 letters/numbers</string>
    <string name="regist_select_location">Region:</string>
    <string name="phone_regist_select_location">Region:</string>
    <string name="regist_perrmision">3D Store user agreement</string>
    <string name="regist_send_verify_code">Get verifycode</string>
    <string name="reget_send_verify_code">Resend({0})</string>
    <string name="regist_input_phone"></string>
    <string name="regist_verify_code">VerifyCode:</string>
    <string name="regist_edit_verify_code_hint">Enter verifycode</string>
    <string name="battery">Electricity</string>
    <string name="suggest">Suggestion</string>
    <string name="play_setting">Play settings</string>
    <string name="download_setting">Cache/Download</string>
    <string name="network_setting">Network</string>
    <string name="caption_setting">Subtitle</string>
    <string name="audio_track_setting">AudioTrack</string>
    <string name="play_setting_first_select_high">Priority 720P</string>
    <string name="play_setting_first_select_super_high">Priority 1080P</string>
    <string name="install_after_download">Automatically Install App once downloaded</string>
    <string name="delete_after_install">Delete APK once APP is installed</string>
    <string name="audio_setting_first_orin">Priority Original Audio</string>
    <string name="audio_setting_first_local">Priority System Language Audio</string>
    <string name="download_setting_first_select_high">Priority 720P</string>
    <string name="download_setting_first_select_super_high">Priority 1080P</string>
    <string name="game_settting">Game Setting</string>
    <string name="download_setting_first_ch">Chinese</string>
    <string name="download_setting_first_en">English</string>
    <string name="loginout">Log Out</string>
    <string name="setting">Settings</string>
    <string name="all_game">All Game</string>
    <string name="video_intro">Synopsis</string>
    <string name="video_comment">Comment</string>
    <string name="no_wifi_play">Play in 2G/3G/4G</string>
     <string name="game_setting_tip">Open 3D visual</string>
    <string name="no_wifi_download">Cache in 2G/3G/4G</string>
    <string name="user_center">Me</string>
    <string name="check_update">Check Update</string>
    <string name="qq_group_by_app">QQ Group:</string>
    <string name="email_group_by_app">Email:</string>
    <string name="conpany_info">3D Store Ltd. All Rights Reserved.</string>
    <string name="copyright">Copyright ©2015 3D Store ALL Rights Reserved</string>
    <string name="current_version">Version:%1$s</string>
    <string name="no_play_record_tip">No watched records</string>
    <string name="no_network_movie">Failed to get data!</string>
    <string name="no_purchase_record_tip">No purchased records</string>
    <string name="detail_movie_prevue">Trailer</string>
    <string name="select_location">Region</string>
    <string name="download_cancle">Have caching task,confirm to exit?</string>
    <string name="real_quit">Exit</string>
    <string name="search">Search</string>
    <string name="none_current">Not available</string>
    <string name="searching">Searching&#8230;</string>
    <string name="fetch_data_error">Failed to get data!</string>
    <string name="search_history_tit">Search History</string>
    <string name="clear_search_history_tit">Delete all</string>
    <string name="title_activity_search_resource">Search resources</string>
    <string name="search_resource_input_box_hint">Enter search keywords</string>
    <string name="search_resource_query_failed">Error!please retray later</string>
    <string name="search_resource_info_no_network">Please check network</string>
    <string name="search_resource_query_found_nothing_info">No search results~</string>
    <string name="search_resource_info_input_is_null">The input can not be empty,please enter again</string>
    <string name="search_resource_activity_hotword_header_title">Popular search</string>
    <string name="search_resource_info_input_excceed_max_num">Input to the limit</string>
    <string name="download_app_init">Download</string>
    <string name="download_app_running">Downloading</string>
    <string name="download_app_paused">Paused</string>
    <string name="download_app_failed">Failed</string>
    <string name="download_app_open">Open</string>
    <string name="download_app_install">Install</string>
    <string name="game_download">Download</string>
    <string name="deleting_task">Deleting&#8230;</string>
    <string name="deleting_task_failed">Delete failed</string>
    <string name="file_no_exist">The file does not exist!</string>
    <string name="confirm_delete_msg">Are you sure to delete?</string>
    <string name="sdcard_full_failed">The operation failed,the disk is full</string>
    <string name="sdcard_full_failed_2">Cache failed,the disk is full!</string>
    <string name="no_download_record_msg">No cached records</string>
    <string name="fetching_download_list_msg">Getting the local list</string>
    <string name="local_space_size">Memory space:Only %1$s/%2$s</string>
    <string name="download_tast_success">Caching successful</string>
    <string name="download_tast_file_already_exist">The task has been in existence </string>
    <string name="download_tast_already_exist">The video has been in existence</string>
    <string name="download_tast_acces_permission_denied">SD card error,unable to cache!</string>
    <string name="download_tast_maxsize_failed">Creat a task failed,can not support files larger than 4G</string>
    <string name="download_tast_error_info">Sorry,the video can not be cached</string>
    <string name="download_tast_default_err">Creat a task failed,error:{1}</string>
    <string name="download_waitting">Waitting</string>
    <string name="download_paused">Pause</string>
    <string name="download_failed">Cache failed</string>
    <string name="create_file_failed">Creat task failed</string>
    <string name="write_file_failed">Write file failed</string>
    <string name="read_file_failed">Read file failed</string>
    <string name="sdcard_no_space">Deficiency of\n storage space</string>
    <string name="douban_user">douban users</string>
    <string name="data_null_and_wait_for_server">No data,please waitting for a moment.</string>
    <string name="video_detail">Film details</string>
    <string name="movie_director">Director:</string>
    <string name="movie_actors">Actors:</string>
    <string name="movie_genres">Genres:</string>
    <string name="movie_year">Year:</string>
    <string name="detail_activity_play"> Play </string>
    <string name="suggest_hint">Please enter your suggestion&#8230;</string>
    <string name="contact_hint">Please enter your contact information</string>
    <string name="submit_success">Submit success,thank you!</string>
    <string name="submit_failed">Submit failed,please try again.</string>
    <string name="submit_empty_tip">Please enter your suggestion!</string>
    <string name="submit_max_check_tip">Sorry,input has reached the maximum limit</string>
    <string name="feedback_submitting">Submiting&#8230;</string>
    <string name="permission_opening">Agreement&#8230;</string>
    <string name="no_albumid">Source id is error</string>
    <string name="login_state_unavailable">Account sign out, because your account has login another device</string>
    <string name="logout_processing">Log out&#8230;</string>
    <string name="wait">Waiting</string>
    <string name="change_resource">Change resource</string>
    <string name="other_error">Other error</string>
    <string name="unknown_error">Unknown error</string>
    <string name="no_net_connection">No network connection</string>
    <string name="select_all">All</string>
    <string name="login_username_limit">The user name cannot exceed 40 characters</string>
    <string name="login_password_limit">The password cannot exceed 16 characters</string>
    <string name="login_ing">Logining&#8230;</string>
	<string name="reget_password">Recover password</string>
    <string name="email">Enter the email</string>
    <string name="register_nickname_tip">Nickname can not be changed after registration</string>
	<string name="register_invalid_email_tip">Account password can not be recovered if the registration of non-real mailbox</string>
	<string name="please_end_new_password"><![CDATA[<font color="#1e91eb">Please set payment password (composed of 6 numbers)</font>]]></string>
	<string name="please_end_new_password_for_what">So it can be used in the safe authentication before transaction </string>
	<string name="please_ensure_new_password">Please enter the same password again to verify that you have typed it correctly. </string>
</resources>