<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:id="@+id/enter_new_password_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/setting_new_pay_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="31dp"
            android:gravity="center_horizontal"
            android:text="@string/please_end_new_password"
            android:textSize="15sp"
            android:textColor="@color/message_text_color" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/please_end_new_password_for_what"
            android:textSize="15sp"
            android:textColor="@color/message_text_color" />

        <com.runmit.sweedee.view.gridpasswordview.GridPasswordView
            android:id="@+id/enter_new_password_gpv"
            android:layout_width="342dp"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            app:itemLineColor="@color/passowrd_line_cut"
            app:lineWidth="1dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ensure_new_password_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/please_ensure_new_password"
            android:textSize="15sp"
            android:textColor="@color/message_text_color"
            android:layout_marginTop="47dp" />

        <com.runmit.sweedee.view.gridpasswordview.GridPasswordView
            android:id="@+id/ensure_new_password_gpv"
            android:layout_width="342dp"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            app:itemLineColor="@color/passowrd_line_cut"
            app:lineWidth="1dp" />
    </LinearLayout>

</FrameLayout>